# contentgen-pipeline

./: .cursorrules  .gitignore  DOWNLOAD_COMMANDS.md  README.md  cookies-facebook.txt  cookies-instagram.txt  downloader.py  env_telegram_bot  pyproject.toml  requirements.txt  spec.md  steps.md  test_adapta_generators.py  test_base_generator.py  test_config.py  test_media_processor.py  test_orchestrator.py  test_transcriber.py  test_transcription.py  transcription_adapter.py
src/contentgen_pipeline/: __init__.py  __main__.py  cli.py  config.py  main.py
src/contentgen_pipeline/core/: __init__.py  media_processor.py  transcriber.py  video_downloader.py
src/contentgen_pipeline/generators/: __init__.py  base.py
src/contentgen_pipeline/generators/adapta/: __init__.py  claude_generator.py  client.py  gemini_generator.py  gpt_generator.py
src/contentgen_pipeline/pipeline/: __init__.py  orchestrator.py
src/contentgen_pipeline/prompts/: diagram.txt  mindmap.txt  preprocess_mindmap.txt  summarize.txt
src/contentgen_pipeline/utils/: __init__.py  logger.py  sentence_splitter.py  text_cleaner.py
