[project]
name = "contentgen-pipeline"
version = "0.1.0"
description = "Pipeline de automação para geração de conteúdo a partir de mídia"
authors = [
    {name = "Thiago Oliveira"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "typer (>=0.16.0,<0.17.0)",
    "rich (>=14.0.0,<15.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "faster-whisper (>=1.1.1,<2.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "numba (>=0.61.2,<0.62.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "transcription-library @ git+https://github.com/thiagofdso/transcription_library.git"
]

[project.scripts]
contentgen = "contentgen_pipeline.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
