[project]
name = "contentgen-pipeline"
version = "0.1.0"
description = "Pipeline de automacao para geracao de conteudo a partir de midia"
authors = [
    { name = "Thiago Oliveira" }
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "python-dotenv>=1.1.0,<2.0.0",
    "pydantic>=2.11.7,<3.0.0",
    "pydantic-settings>=2.9.1,<3.0.0",
    "typer>=0.16.0,<0.17.0",
    "rich>=14.0.0,<15.0.0",
    "loguru>=0.7.3,<0.8.0",
    "httpx>=0.28.1,<0.29.0",
    "pandas>=2.3.0,<3.0.0",
    "spacy>=3.8.7,<4.0.0",
    "accelerate>=1.10.0,<2.0.0",
    "hf-xet>=1.1.0,<2.0.0",
    "transformers>=4.56.2,<4.57.0",
    "torch==2.5.1+cu121",
    "torchvision==0.20.1+cu121",
    "torchaudio==2.5.1+cu121",
    "transcription-library @ git+https://github.com/thiagofdso/transcription_library.git@cef17ed6d1c8fad5c197fb195f6140acd0c4c0ff"
]

[project.scripts]
contentgen = "contentgen_pipeline.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0"
]

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

